--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
                         </ul>
                     </li>
                     <li>
-                        @Html.ActionLink("Course", "Save", "Course")
+                        @Html.ActionLink("Course", "SaveCourse", "Course")
                         <ul>
-                            <li>@Html.ActionLink("Save Course", "Save", "Course")</li>
+                            <li>@Html.ActionLink("Save Course", "SaveCourse", "Course")</li>
                             <li>@Html.ActionLink("View Course Details", "ViewCourseStatistics", "CourseAssign")</li>
-                            <li>@Html.ActionLink("Unassign All Courses", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Unassign All Courses", "UnassignCourses", "Course")</li>
                         </ul>
                     </li>
                     <li>
