Modify Some UI Design

--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Content/Site.css
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Content/Site.css
@@ -1,13 +1,35 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-color: #e6ffe6;
+    background-color: #e6ffff;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.box-75 {
+    margin: auto;
+    width: 75%;
+    border: none;
+    border-radius: 15px;
+    background-color: #e6ffe6;
+    box-shadow: 2px 5px 15px 3px #888888;
+}
+
+
+label.error {
+    color: red;
+    font-size: 10px;
+    font-style: italic;
+}
+
+.field-validation-error {
+    color: red;
+    font-size: 10px;
+    font-style: italic;
 }
 
 .menu li {
