--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                         <ul>
                             <li>@Html.ActionLink("Class Room Allocation", "Allocate", "RoomAllocation")</li>
                             <li>@Html.ActionLink("Class Schedule and Room Information", "Department", "Department")</li>
-                            <li>@Html.ActionLink("Unallocate Classrooms", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Unallocate Classrooms", "UnallocatedClassRoom", "RoomAllocation")</li>
                         </ul>
                     </li>
                 </ul>
