--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Course/SaveCourse.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Course/SaveCourse.cshtml
@@ -15,8 +15,10 @@
     @Html.RenderFlashMessages()
 
     <div class="form-horizontal">
-        <fieldset>
-            <legend>Save Course</legend>
+        <fieldset class="box-75">
+            @*<legend>Save Course</legend>*@
+            <h2 class="text-center">Save Course</h2>
+            <hr />
             <div class="col-md-8 col-md-offset-3">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -46,7 +48,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control"} })
                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -55,7 +57,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Department.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("DepartmentId", null, "--Select Department--", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Department.DepartmentId, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -84,3 +86,11 @@
 @*<div>
         @Html.ActionLink("Back to List", "Index")
     </div>*@
+
+@section scripts
+{
+
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
