--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Course/UnassignCourses.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Course/UnassignCourses.cshtml
@@ -5,19 +5,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Unassign All Courses</h2>
-<hr />
 <br />
 <br />
 <br />
 <br />
+<br />
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-group" style="text-align: center">
-        <input type="button" value="Unassign Courses" id="unassignCourses" class="btn btn-success btn-lg" />
-    </div>
+<div class="form-group box-75" style="text-align: center">
+    <br />
+    <h2 class="text-center">Unassign All Course</h2>
+    <hr />
+    <br />
+    <input type="button" value="Unassign All Course" id="unassignCourses" class="btn btn-success btn-lg" />
+    <br />
+    <br />
+    <br />
+</div>
 
     <div class="form-group" style="text-align: center">
         <div class="col-md-offset-2 col-md-10">
