--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/SaveDepartment.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/SaveDepartment.cshtml
@@ -10,6 +10,8 @@
 
 <br />
 <br />
+<br />
+<br />
 
 @using (Html.BeginForm())
 {
@@ -23,8 +25,10 @@
         </fieldset>*@
 
 
-        <fieldset>
-            <legend>Save Department</legend>
+        <fieldset class="box-75">
+            @*<legend>Save Department</legend>*@
+            <h2 class="text-center">Save Department</h2>
+            <hr />
             <div class="col-md-8 col-md-offset-3">
                 <div class="form-group">
                     @Html.LabelFor(m => m.Code, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -43,7 +47,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Save" class="btn btn-default btn-block btn-info" />
                     </div>
                 </div>
             </div>
