--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/ViewDetails.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/ViewDetails.cshtml
@@ -12,12 +12,13 @@
 }*@
 <br />
 <br />
-<h2>View Details</h2>
+<h2 class="text-center">View All Department</h2>
+<hr />
 
 
 
-<table class="table table-bordered table-striped">
-    <thead>
+<table class="table table-bordered table-striped width-75">
+    <thead class="bg-primary">
         <tr>
             <th>Code</th>
             <th>Name</th>
@@ -29,7 +30,7 @@
         {
             <tr>
                 <td class="success">@department.Code</td>
-                <td class="danger">@department.Name</td>
+                <td class="warning">@department.Name</td>
             </tr>
         }
 
