--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Content/Site.css
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Content/Site.css
@@ -13,16 +13,21 @@
 .box-75 {
     margin: auto;
     width: 75%;
+    padding: 0px 10px;
     border: none;
     border-radius: 15px;
     background-color: #e6ffe6;
     box-shadow: 2px 5px 15px 3px #888888;
 }
 
+.width-75{
+    margin: auto;
+    width: 75%;
+}
 
 label.error {
     color: red;
-    font-size: 10px;
+    font-size: 12px;
     font-style: italic;
 }
 
