--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/SaveDepartment.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/SaveDepartment.cshtml
@@ -29,25 +29,26 @@
             @*<legend>Save Department</legend>*@
             <h2 class="text-center">Save Department</h2>
             <hr />
-            <div class="col-md-8 col-md-offset-3">
+            <div class="col-12">
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Code, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    @Html.LabelFor(m => m.Code, htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-8">
                         @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    @Html.LabelFor(m => m.Name, htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-8">
                         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default btn-block btn-info" />
+                    <div class="col-md-offset-4 col-md-8">
+                        <input type="submit" value="Save" class="btn btn-block btn-success" />
+                        <br />
                     </div>
                 </div>
             </div>
