--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                         </ul>
                     </li>
                     <li>
-                        @Html.ActionLink("Course", "SaveCourse", "Course")
+                        @Html.ActionLink("Course", "Save", "Course")
                         <ul>
-                            <li>@Html.ActionLink("Save Course", "SaveCourse", "Course")</li>
-                            <li>@Html.ActionLink("View Course Details", "ViewCourseStatistics", "CourseAssign")</li>
+                            <li>@Html.ActionLink("Save Course", "Save", "Course")</li>
+                            <li>@Html.ActionLink("View Course Statistics", "ViewCourseStatistics", "CourseAssign")</li>
                             <li>@Html.ActionLink("Unassign All Courses", "UnassignCourses", "Course")</li>
                         </ul>
                     </li>
@@ -48,9 +48,9 @@
                         @Html.ActionLink("Student", "Register", "Student")
                         <ul>
                             <li>@Html.ActionLink("Register Student", "Register", "Student")</li>
-                            <li>@Html.ActionLink("Enroll Student in a Course", "Department", "Department")</li>
-                            <li>@Html.ActionLink("Save Student Result", "Department", "Department")</li>
-                            <li>@Html.ActionLink("View Result", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Enroll Student in a Course", "Enroll", "EnrollCourses")</li>
+                            <li>@Html.ActionLink("Save Student Result", "SaveResult", "EnrollCourses")</li>
+                            <li>@Html.ActionLink("View Result", "ViewResult", "EnrollCourses")</li>
                         </ul>
                     </li>
                     <li>
