--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Content/Site.css
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Content/Site.css
@@ -20,7 +20,17 @@
     box-shadow: 2px 5px 15px 3px #888888;
 }
 
-.width-75{
+.box-100 {
+    width: 100%;
+    padding: 0px 10px;
+    margin: 10px;
+    border: none;
+    border-radius: 15px;
+    background-color: #e6ffe6;
+    box-shadow: 2px 5px 15px 3px #888888;
+}
+
+.width-75 {
     margin: auto;
     width: 75%;
 }
