--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/CourseAssign/ViewCourseStatistics.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/CourseAssign/ViewCourseStatistics.cshtml
@@ -120,7 +120,7 @@
 
                         if (tableRow == false) {
                             $("#htmlTableDiv").hide();
-                            if (deptId != 0)
+                            if (Departments != 0)
                                 $("#messageLabel").text("This Department has no Course.");
                         }
                     }
